# ULServer

./: .gitignore  CENTOS_INSTALL.md  Makefile  README.md  Rules.make  Rules.make~  ULServer.sln  ULServer.vcxproj.filters  UlServer.dsw  UlServer.sln  UpgradeLog.htm  jenkins.build.properties  meson.build
libsrc/: Makefile  ULServer - Shortcut.lnk  create_links.sh  getopt.h  liblyra.sln  liblyra.vcxproj  liblyra.vcxproj.filters  meson.build  unistd.h
libsrc/db/: .depend  DB.dsp  DB.vcxproj  DB.vcxproj.filters  LmGlobalDB.cpp  LmGlobalDB.h  LmGlobalDB.i  LmGoalInfo.cpp  LmGoalInfo.h  LmItemGenDB.cpp  LmItemGenDB.h  LmPlayerDB.cpp  LmPlayerDB.h  LmPlayerNameMap.cpp  LmPlayerNameMap.h  LmPlayerNameMap.h.bak  LmRoomDB.cpp  LmRoomDB.h  LmRoomDB.i  Makefile  meson.build
libsrc/dbi_gdbm/: .depend  DBI_gdbm.dsp  DBI_gdbm.vcxproj  DBI_gdbm.vcxproj.filters  LmPlayerDBF.cpp  LmPlayerDBF.h  LmPlayerDBF.i  Makefile  meson.build
libsrc/dbi_mysql/: DBI_MySQL.dsp  DBI_MySQL.vcxproj  DBI_MySQL.vcxproj.filters  LmBillingDBC.cpp  LmBillingDBC.h  LmBillingDBC.i  LmGuildDBC.cpp  LmGuildDBC.h  LmGuildDBC.i  LmItemDBC.cpp  LmItemDBC.h  LmItemDBC.i  LmLevelDBC.cpp  LmLevelDBC.h  LmPlayerDBC.cpp  LmPlayerDBC.h  LmServerDBC.cpp  LmServerDBC.h  Makefile  meson.build
libsrc/gdbm/: .depend  Gdbm.cpp  Gdbm.h  LmDatabase.cpp  LmDatabase.h  LmDatabase.i  LmDatabaseKey.cpp  LmDatabaseKey.h  LmDatabaseKey.i  Makefile  gdbm.dsp  gdbm.vcxproj  gdbm.vcxproj.filters  meson.build
libsrc/gmsg/: .depend  GMsg.dsp  GMsg.h  GMsg.vcxproj  GMsg.vcxproj.filters  GMsg_AgentLogin.cpp  GMsg_AgentLogin.h  GMsg_All.h  GMsg_ChangeAvatar.cpp  GMsg_ChangeAvatar.h  GMsg_ChangeStat.cpp  GMsg_ChangeStat.h  GMsg_ChangeStat.i  GMsg_CreateItem.cpp  GMsg_CreateItem.h  GMsg_CreateItem.i  GMsg_DestroyItem.cpp  GMsg_DestroyItem.h  GMsg_DestroyRoomItem.cpp  GMsg_DestroyRoomItem.h  GMsg_DestroyRoomItem.i  GMsg_Error.cpp  GMsg_Error.h  GMsg_Error.i  GMsg_GetGoalHdrs.cpp  GMsg_GetGoalHdrs.h  GMsg_GetItem.cpp  GMsg_GetItem.h  GMsg_GetItemDescription.cpp  GMsg_GetItemDescription.h  GMsg_GetItemDescription.i  GMsg_GetLevelPlayers.cpp  GMsg_GetLevelPlayers.h  GMsg_GetPlayerName.cpp  GMsg_GetPlayerName.h  GMsg_GetPlayerName.i  GMsg_GetReportHdrs.cpp  GMsg_GetReportHdrs.h  GMsg_GetReportHdrs.i  GMsg_GiveItem.cpp  (+114 more)
libsrc/include/: GMsg.h  GMsg_AgentLogin.h  GMsg_AgentLogin.i  GMsg_All.h  GMsg_ChangeAvatar.h  GMsg_ChangeAvatar.i  GMsg_ChangeStat.h  GMsg_ChangeStat.i  GMsg_CreateItem.h  GMsg_CreateItem.i  GMsg_DestroyItem.h  GMsg_DestroyItem.i  GMsg_DestroyRoomItem.h  GMsg_DestroyRoomItem.i  GMsg_Error.h  GMsg_Error.i  GMsg_GetGoalHdrs.h  GMsg_GetGoalHdrs.i  GMsg_GetItem.h  GMsg_GetItem.i  GMsg_GetItemDescription.h  GMsg_GetItemDescription.i  GMsg_GetLevelPlayers.h  GMsg_GetLevelPlayers.i  GMsg_GetPlayerName.h  GMsg_GetPlayerName.i  GMsg_GetReportHdrs.h  GMsg_GetReportHdrs.i  GMsg_GiveItem.h  GMsg_GiveItem.i  GMsg_GiveItemAck.h  GMsg_GiveItemAck.i  GMsg_Goal.h  GMsg_Goal.i  GMsg_GotoLevel.h  GMsg_GotoLevel.i  GMsg_GrantPPoint.h  GMsg_GrantPPoint.i  GMsg_ItemDescription.h  GMsg_ItemDescription.i  (+347 more)
libsrc/net/: .depend  LmConnection.cpp  LmConnection.h  LmConnectionList.h  LmConnectionSet.cpp  LmConnectionSet.h  LmSockAddr.cpp  LmSockAddr.h  LmSockAddrInet.cpp  LmSockAddrInet.h  LmSockType.cpp  LmSockType.h  LmSockType.i  LmSocket.cpp  LmSocket.h  Makefile  Net.dsp  Net.vcxproj  Net.vcxproj.filters  meson.build
libsrc/private/: .depend  LmConnectionSetImp.cpp  LmConnectionSetImp.h  LmConnectionSetImp.i  LmMesgBufPoolImp.cpp  LmThreadMQ.cpp  LmThreadMQ.h  LmThreadMQ.i  Makefile  Private.dsp  Private.vcxproj  Private.vcxproj.filters  meson.build
libsrc/pth/: .depend  Makefile  PTh.cpp  PTh.h  PTh.i  PThAttr.cpp  PThAttr.h  PThAttr.i  PThCond.cpp  PThCond.h  PThCond.i  PThMutex.cpp  PThMutex.h  PThMutex.i  Pth.dsp  Pth.vcxproj  Pth.vcxproj.filters  meson.build
libsrc/rmsg/: .depend  Makefile  RMsg.dsp  RMsg.h  RMsg.vcxproj  RMsg.vcxproj.filters  RMsg_ChangeAvatar.cpp  RMsg_ChangeAvatar.h  RMsg_ChangeAvatar.i  RMsg_CupSummons.cpp  RMsg_CupSummons.h  RMsg_CupSummons.i  RMsg_EnterRoom.cpp  RMsg_EnterRoom.h  RMsg_Error.cpp  RMsg_Error.h  RMsg_GetAvatarDescription.cpp  RMsg_GetAvatarDescription.h  RMsg_GetRoomDescription.cpp  RMsg_GetRoomDescription.h  RMsg_GotoRoom.cpp  RMsg_GotoRoom.h  RMsg_ItemDrop.cpp  RMsg_ItemDrop.h  RMsg_ItemHdrDrop.cpp  RMsg_ItemHdrDrop.h  RMsg_ItemPickup.cpp  RMsg_ItemPickup.h  RMsg_ItemPickup.i  RMsg_JoinedParty.cpp  RMsg_JoinedParty.h  RMsg_JoinedParty.i  RMsg_LeaveRoom.cpp  RMsg_LeaveRoom.h  RMsg_LeaveRoom.i  RMsg_LoginAck.cpp  RMsg_LoginAck.h  RMsg_LoginAck.i  RMsg_Logout.cpp  RMsg_Logout.h  (+31 more)
libsrc/server/: .depend  LmDispatch.cpp  LmDispatch.h  LmDispatch.i  LmInventory.cpp  LmInventory.h  LmInventory.i  LmItemGen.cpp  LmItemGen.h  LmItemGenColors.cpp  LmItemGenNames.h  LmItemGenTables.h  LmMesgBufPool.cpp  LmMesgBufPool.h  LmMesgBufPool.i  LmMessageReader.cpp  LmMessageReader.h  LmNetworkInput.cpp  LmNetworkInput.h  LmNetworkInput.i  LmNetworkOutput.cpp  LmNetworkOutput.h  LmNetworkOutput.i  LmParty.cpp  LmParty.h  LmRoomItem.cpp  LmRoomItem.h  LmRoomItemList.h  LmSignalThread.cpp  LmSignalThread.h  LmSrvMesgBuf.cpp  LmThread.cpp  LmThread.h  LmThread.i  LmThreadPool.cpp  LmThreadPool.h  Makefile  Server.dsp  Server.vcxproj  Server.vcxproj.filters  (+1 more)
libsrc/shared/: .depend  LmArts.cpp  LmArts.h  LmAvatar.cpp  LmAvatar.h  LmAvatar.i  LmBit32.cpp  LmBit32.h  LmBit32.i  LmGame.h  LmItem.cpp  LmItem.h  LmItemDefs.cpp  LmItemDefs.h  LmItemHdr.cpp  LmItemHdr.h  LmItemHdr.i  LmItemNames.h  LmMesg.cpp  LmMesg.h  LmMesg.i  LmMesgBuf.cpp  LmMesgBuf.h  LmMesgBuf.i  LmMesgHdr.cpp  LmMesgHdr.h  (+24 more)
util/: .depend  Makefile  check_level.cpp  check_serverdb.cpp  deghost.cpp  dump_item.cpp  dump_item2.cpp  dump_state.cpp  fix_ghost.cpp  gamed_kill  gdbinit  gdbm2text  gdbm_clean.cpp  gdbm_clean_all  gdbm_dump  gen_item.cpp  get_hostid  get_hostid.cpp  get_server_status.cpp  get_server_status2.cpp  leveld_kill  meson.build  ping_servers.cpp  print_xp.cpp  rotate_logs.cpp  save_all_players  save_player.cpp  text2codex  text2gdbm  tounicode.pl
(+570 files in other folders)
