CHECK_LEVEL = executable('check_level',
		'check_level.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

CHECK_SERVERDB = executable('check_serverdb',
		'check_serverdb.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

DUMP_ITEM = executable('dump_item',
		'dump_item.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

DUMP_ITEM2 = executable('dump_item2',
		'dump_item2.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

DUMP_STATE = executable('dump_state',
		'dump_state.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

FIX_GHOST = executable('fix_ghost',
		'fix_ghost.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

GDBM_CLEAN = executable('gdbm_clean',
		'gdbm_clean.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

GEN_ITEM = executable('gen_item',
		'gen_item.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

GET_SERVER_STATUS = executable('get_server_status',
		'get_server_status.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

GET_SERVER_STATUS2 = executable('get_server_status2',
		'get_server_status2.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

PING_SERVERS = executable('ping_servers',
		'ping_servers.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

PRINT_XP = executable('print_xp',
		'print_xp.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)

ROTATE_LOGS = executable('rotate_logs',
		'rotate_logs.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)
