DBI_MYSQL = library('DBI_MYSQL', 
	        'LmBillingDBC.cpp',
                'LmGuildDBC.cpp',
                'LmItemDBC.cpp',
                'LmLevelDBC.cpp',
                'LmPlayerDBC.cpp',
                'LmServerDBC.cpp',
                include_directories: incdir,
                cpp_args: libmysqlflags)
