GMSG_FILES = files( 
		'GMsg_AgentLogin.cpp',
		'GMsg_ChangeAvatar.cpp',
		'GMsg_ChangeStat.cpp',
		'GMsg_CreateItem.cpp',
		'GMsg_DestroyItem.cpp',
		'GMsg_DestroyRoomItem.cpp',
		'GMsg_Error.cpp',
		'GMsg_GetGoalHdrs.cpp',
		'GMsg_GetItem.cpp',
		'GMsg_GetItemDescription.cpp',
		'GMsg_GetLevelPlayers.cpp',
		'GMsg_GetPlayerName.cpp',
		'GMsg_GetReportHdrs.cpp',
		'GMsg_GiveItemAck.cpp',
		'GMsg_GiveItem.cpp',
		'GMsg_Goal.cpp',
		'GMsg_GotoLevel.cpp',
		'GMsg_GrantPPoint.cpp',
		'GMsg_ItemDescription.cpp',
		'GMsg_ItemDrop.cpp',
		'GMsg_ItemPickup.cpp',
		'GMsg_LevelPlayers.cpp',
		'GMsg_LocateAvatarAck.cpp',
		'GMsg_LocateAvatar.cpp',
		'GMsg_LocateMaresAck.cpp',
		'GMsg_LocateNewliesAck.cpp',
		'GMsg_LoginAck.cpp',
		'GMsg_Login.cpp',
		'GMsg_Logout.cpp',
		'GMsg_Ping.cpp',
		'GMsg_PostGoal.cpp',
		'GMsg_PostReport.cpp',
		'GMsg_PPointAck.cpp',
		'GMsg_PreLoginAck.cpp',
		'GMsg_PreLogin.cpp',
		'GMsg_PutItem.cpp',
		'GMsg_RcvGoalbookHdr.cpp',
		'GMsg_RcvGoalDetails.cpp',
		'GMsg_RcvGoalHdr.cpp',
		'GMsg_RcvGoalText.cpp',
		'GMsg_RcvPlayerName.cpp',
		'GMsg_RcvReportGoals.cpp',
		'GMsg_RcvReportHdr.cpp',
		'GMsg_RcvReportText.cpp',
		'GMsg_SenseDreamersAck.cpp',
		'GMsg_ServerDown.cpp',
		'GMsg_SetAvatarDescription.cpp',
		'GMsg_ShowItem.cpp',
		'GMsg_SummonAvatarAck.cpp',
		'GMsg_SummonAvatar.cpp',
		'GMsg_TakeItemAck.cpp',
		'GMsg_TakeItem.cpp',
		'GMsg_UpdateItem.cpp',
		'GMsg_UpdateStats.cpp',
		'GMsg_UsePPoint.cpp',
		'GMsg_ViewItem.cpp'
)
