RMSG = library(	'RMsg',
		'RmRemotePlayer.cpp',
		'RMsg_ChangeAvatar.cpp',
		'RMsg_CupSummons.cpp',
		'RMsg_EnterRoom.cpp',
		'RMsg_Error.cpp',
		'RMsg_GetAvatarDescription.cpp',
		'RMsg_GetRoomDescription.cpp',
		'RMsg_GotoRoom.cpp',
		'RMsg_ItemDrop.cpp',
		'RMsg_ItemHdrDrop.cpp',
		'RMsg_ItemPickup.cpp',
		'RMsg_JoinedParty.cpp',
		'RMsg_LeaveRoom.cpp',
		'RMsg_LoginAck.cpp',
		'RMsg_Logout.cpp',
		'RMsg_NewlyAwakened.cpp',
		'RMsg_Party.cpp',
		'RMsg_PartyInfo.cpp',
		'RMsg_Ping.cpp',
		'RMsg_PlayerMsg.cpp',
		'RMsg_PlayerUpdate.cpp',
		'RMsg_RcvAvatarDescription.cpp',
		'RMsg_RoomDescription.cpp',
		'RMsg_RoomLoginAck.cpp',
		'RMsg_Speech.cpp',
		'RMsg_Update.cpp',
                include_directories: incdir,
                cpp_args: libmysqlflags)
