SERVER_FILES = files( 
		'LmDispatch.cpp',
		'LmInventory.cpp',
		'LmItemGenColors.cpp',
		'LmItemGen.cpp',
		'LmMesgBufPool.cpp',
		'LmMessageReader.cpp',
		'LmNetworkInput.cpp',
		'LmNetworkOutput.cpp',
		'LmParty.cpp',
		'LmRoomItem.cpp',
		'LmSignalThread.cpp',
		'LmSrvMesgBuf.cpp',
		'LmThread.cpp',
		'LmThreadPool.cpp'
)
