SHARED = library('Shared',
		'LmArts.cpp',
		'LmAvatar.cpp',
		'LmBit32.cpp',
		'LmItem.cpp',
		'LmItemDefs.cpp',
		'LmItemHdr.cpp',
		'LmMesgBuf.cpp',
		'LmMesg.cpp',
		'LmMesgHdr.cpp',
		'lmparty.cpp',
		'LmPeerUpdate.cpp',
		'LmPosition.cpp',
		'LmStats.cpp',
		'LnMD5.cpp',
		'LyraMessage.cpp',
		'md5.cpp',
                include_directories: incdir,
                cpp_args: libmysqlflags)
