SMSG_FILES = files( 
		'SMsg_ConnStatus.cpp',
		'SMsg_DBQueryAck.cpp',
		'SMsg_DBQuery.cpp',
		'SMsg_DestroyRoomItem.cpp',
		'SMsg_DS_Action.cpp',
		'SMsg_DumpState.cpp',
		'SMsg_Error.cpp',
		'SMsg_GetItem.cpp',
		'SMsg_GetLevelPlayers.cpp',
		'SMsg_GetServerStatus.cpp',
		'SMsg_GiveItemAck.cpp',
		'SMsg_GiveItem.cpp',
		'SMsg_GS_Action.cpp',
		'SMsg_GS_Login.cpp',
		'SMsg_GS_Logout.cpp',
		'SMsg_ItemDrop.cpp',
		'SMsg_ItemPickup.cpp',
		'SMsg_LevelLogin.cpp',
		'SMsg_LocateAvatar.cpp',
		'SMsg_Login.cpp',
		'SMsg_Logout.cpp',
		'SMsg_LS_Action.cpp',
		'SMsg_LS_Login.cpp',
		'SMsg_PartyLeader.cpp',
		'SMsg_Ping.cpp',
		'SMsg_PlayerStatus.cpp',
		'SMsg_Proxy.cpp',
		'SMsg_PutItem.cpp',
		'SMsg_RecvMesg.cpp',
		'SMsg_ResetPort.cpp',
		'SMsg_RotateLogs.cpp',
		'SMsg_SendMesg.cpp',
		'SMsg_ServerStatus.cpp',
		'SMsg_SetAvatarDescription.cpp',
		'SMsg_ShowItem.cpp',
		'SMsg_TakeItemAck.cpp',
		'SMsg_UniverseBroadcast.cpp'
)
