UTIL = library(	'Util',
		'LmAssert.cpp',
		'LmFuncTimer.cpp',
		'LmIdSet.cpp',
		'LmLocker.cpp',
		'LmLog.cpp',
		'LmLogFile.cpp',
		'LmLogSyslog.cpp',
		'LmNew.cpp',
		'LmRand.cpp',
		'LmTimer.cpp',
		'LmUtil.cpp',
                include_directories: incdir,
                cpp_args: libmysqlflags)
