GAMED = executable('gamed',
		'GsForwardThread.cpp',
		'GsGameThread.cpp',
		'GsInputDispatch.cpp',
		'GsLevelSet.cpp',
		'GsMain.cpp',
		'GsMessageReader.cpp',
		'GsNetworkInput.cpp',
		'GsNetworkOutput.cpp',
		'GsOutputDispatch.cpp',
		'GsPlayer1.cpp',
		'GsPlayer2.cpp',
		'GsPlayer3.cpp',
		'GsPlayer4.cpp',
		'GsPlayer.cpp',
		'GsPlayerSet.cpp',
		'GsPlayerThread1.cpp',
		'GsPlayerThread2.cpp',
		'GsPlayerThread3.cpp',
		'GsPlayerThread4.cpp',
		'GsPlayerThread.cpp',
		'GsPlayerThreadSet.cpp',
		'GsPositionThread.cpp',
		'GsSignalThread.cpp',
		'GsUtil.cpp',
		'Main.cpp',
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)
