LEVELD = executable('leveld',
		'LsCodexText.cpp',
		'LsComputeGroups.cpp',
		'LsInputDispatch.cpp',
		'LsItemGen.cpp',
		'LsLevelSerials.cpp',
		'LsLevelState.cpp',
		'LsLevelThread.cpp',
		'LsMain.cpp',
		'LsMessageReader.cpp',
		'LsNetworkInput.cpp',
		'LsNetworkOutput.cpp',
		'LsOutputDispatch.cpp',
		'LsPlayer.cpp',
		'LsPlayerSet.cpp',
		'LsPositionThread.cpp',
		'LsRoomState.cpp',
		'LsRoomThread1.cpp',
		'LsRoomThread2.cpp',
		'LsRoomThread3.cpp',
		'LsRoomThread.cpp',
		'LsSignalThread.cpp',
		'LsUtil.cpp',
		'Main.cpp',
		install: true,
		link_with: LYRA,
                include_directories: incdir,
                cpp_args: libmysqlflags)
